Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-48231

Select All in context menu of QAbstractSpinBox does not show keyboard accelerator

    XMLWordPrintable

Details

    • Linux/X11
    • c871ba2b23719354659938e5fb8c7898b22ab459 (qt/qtbase/dev)

    Description

      Attached are two screenshots, one shows the context menu of a QLineEdit Widget which shows "Ctrl+A" in the last line with "Select All" ind then there is the context menu for QDateEdit (same for QTimeEdit and other subclasses of QAbstractSpinBox) without the keyboard shortcut "Ctrl+A"

      I expect both menus to show up the same. I see no reason why "Ctrl+A" is shown for one Widget and not for some other.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            frederik Frederik Gladhorn
            Wurgl Wolfgang Formann
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes