Add shortcut for select all in QSpinBox

This adds the shortcut to spinboxes and date edites.

Fixes: QTBUG-48231
Change-Id: I91400e1990e4b1d7d971198c1e2a64149c2a835e
Reviewed-by: Shawn Rutledge <shawn.rutledge@qt.io>